review of hw1 cont. (ChangeLog)

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,4 +2,5 @@
 
  * Initialized repository, created server.py and README.
 
-* Get server.py work
+<INSERT DATE> <INSERT NAME>
+ * Get server.py to work
