--- a/ChangeLog
+++ b/ChangeLog
@@ -5,3 +5,6 @@
 2014-01-07  Titus Brown  <t@Titus-MacBook-Air-2.local>
 
  * Initialized repository, created server.py and README.
+
+2014-02-11 Cameron Keif
+ * in-class exercise
