--- a/ChangeLog
+++ b/ChangeLog
@@ -103,3 +103,21 @@
 	- On the image page you can upvote/downvote images. Once I have
 	  authentication I can change this so each user can only upvote/downvote
 		once. For now, you can just click it as much as you want.
+
+2014-4-16 Cameron Keif
+	* PROJECT: Swipe a template from oswd.org and put it in place on your
+	  imageapp server.
+
+		- I link to the CSS file on my personal web page because I use it on there
+		  as well because I think it's pretty. :)
+
+		- I reference the css file in base.html, so it is referenced in all pages.
+
+	* PROJECT: Implement AJAX image upload with JQuery.
+
+		- I replaced upload2 because I hated it and never used it with the ajax
+			upload, and changed the title to reflect that.
+
+		- When you upload the image, it will show the uploaded image on that page,
+			put it in the database, and display a success message. If it fails an
+			error message appears.
